--- a/sort/main.cpp.sample
+++ b/sort/main.cpp.sample
@@ -1,6 +1,7 @@
 #include "Selection.h"
 #include "Bubble.h"
 #include "BubbleOptimized.h"
+#include "Insertion.h"
 
 int main(int argc, char *argv[])
 {
