Add basic test, impl getVect & setVect in SortBase
The basic test was added just to check if gtest works

Signed-off-by: Thameera Senanayaka <thameera123@gmail.com>

--- a/sort/main.cpp.sample
+++ b/sort/main.cpp.sample
@@ -2,6 +2,7 @@
 #include "Bubble.h"
 #include "BubbleOptimized.h"
 #include "Insertion.h"
+#include "Merge.h"
 
 int main(int argc, char *argv[])
 {
